--- a/MLlab/lab_activit2/1_Pandas_Dataframe.ipynb
+++ b/MLlab/lab_activit2/1_Pandas_Dataframe.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "id": "W8pl4_etcj0n"
       },
@@ -163,7 +163,7 @@
               "3  Mary   4   Infrastructure   60000"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -171,7 +171,9 @@
       "source": [
         "#Define a dictionary 'x'\n",
         "\n",
-        "x = {'Name': ['Rose','John', 'Jane', 'Mary'], 'ID': [1, 2, 3, 4], 'Department': ['Architect Group', 'Software Group', 'Design Team', 'Infrastructure'],\n",
+        "x = {\n",
+        "    'Name': ['Rose','John', 'Jane', 'Mary'], 'ID': [1, 2, 3, 4],\n",
+        "      'Department': ['Architect Group', 'Software Group', 'Design Team', 'Infrastructure'],\n",
         "      'Salary':[100000, 80000, 50000, 60000]}\n",
         "\n",
         "#casting the dictionary to a DataFrame\n",
@@ -443,13 +445,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {
         "id": "cIMCAcSFcj0p"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Student</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>City</th>\n",
+              "      <th>Course</th>\n",
+              "      <th>Marks</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Asim</td>\n",
+              "      <td>23</td>\n",
+              "      <td>Atk.</td>\n",
+              "      <td>Data Sc</td>\n",
+              "      <td>85</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Alia</td>\n",
+              "      <td>27</td>\n",
+              "      <td>Isb.</td>\n",
+              "      <td>Data St.</td>\n",
+              "      <td>80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Ahmed</td>\n",
+              "      <td>22</td>\n",
+              "      <td>Rwp.</td>\n",
+              "      <td>D I P</td>\n",
+              "      <td>90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M. Imran</td>\n",
+              "      <td>28</td>\n",
+              "      <td>Atk.</td>\n",
+              "      <td>Compiler</td>\n",
+              "      <td>70</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Student  Age  City    Course  Marks\n",
+              "0      Asim   23  Atk.   Data Sc     85\n",
+              "1      Alia   27  Isb.  Data St.     80\n",
+              "2     Ahmed   22  Rwp.     D I P     90\n",
+              "3  M. Imran   28  Atk.  Compiler     70"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#write your code here\n"
+        "#write your code here\n",
+        "df1 =pd.DataFrame( {\n",
+        "    \"Student\":[\"Asim\",\"Alia\",\"Ahmed\",\"M. Imran\"],\n",
+        "    \"Age\" : [23,27,22,28],\n",
+        "    \"City\" : [\"Atk.\",\"Isb.\",\"Rwp.\",\"Atk.\"],\n",
+        "    \"Course\":[\"Data Sc\",\"Data St.\",\"D I P\",\"Compiler\"],\n",
+        "    \"Marks\":[85,80,90,70]\n",
+        "})\n",
+        "\n",
+        "df1"
       ]
     },
     {
@@ -463,13 +552,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "id": "PArRx8tucj0q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Marks</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>85</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>70</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Marks\n",
+              "0     85\n",
+              "1     80\n",
+              "2     90\n",
+              "3     70"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#write your code here\n"
+        "#write your code here\n",
+        "b = df1[[\"Marks\"]]\n",
+        "b"
       ]
     },
     {
@@ -483,13 +632,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {
         "id": "yMRL50-Xcj0q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>City</th>\n",
+              "      <th>Course</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Atk.</td>\n",
+              "      <td>Data Sc</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Isb.</td>\n",
+              "      <td>Data St.</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Rwp.</td>\n",
+              "      <td>D I P</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Atk.</td>\n",
+              "      <td>Compiler</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   City    Course\n",
+              "0  Atk.   Data Sc\n",
+              "1  Isb.  Data St.\n",
+              "2  Rwp.     D I P\n",
+              "3  Atk.  Compiler"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#write your code here\n"
+        "#write your code here\n",
+        "c = df1[[\"City\",\"Course\"]]\n",
+        "c"
       ]
     },
     {
@@ -503,21 +717,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
         "id": "MXEqshEscj0q"
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'df1' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Get the Student column as a series Object\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m x = \u001b[43mdf1\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mStudent\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      4\u001b[39m x\n",
-            "\u001b[31mNameError\u001b[39m: name 'df1' is not defined"
-          ]
+          "data": {
+            "text/plain": [
+              "0        Asim\n",
+              "1        Alia\n",
+              "2       Ahmed\n",
+              "3    M. Imran\n",
+              "Name: Student, dtype: str"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -529,11 +746,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "hCwUEJZ-cj0q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "pandas.Series"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#check the type of x\n",
         "type(x)"
