--- a/MLlab/lab_activit2/1_Pandas_Dataframe.ipynb
+++ b/MLlab/lab_activit2/1_Pandas_Dataframe.ipynb
@@ -801,11 +801,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "Y8rufyTHcj0r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Rose'"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the value on the first row and the first column\n",
         "\n",
@@ -814,11 +825,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "GySoXRszcj0r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Architect Group'"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the value on the first row and the third column\n",
         "\n",
@@ -827,11 +849,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "IKlbTSBqcj0r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(100000)"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the column using the name\n",
         "\n",
@@ -849,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "bJDIYCUFcj0r"
       },
@@ -861,11 +894,86 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "nLQ2jBP4cj0r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Department</th>\n",
+              "      <th>Salary</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Name</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Rose</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Architect Group</td>\n",
+              "      <td>100000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>John</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Software Group</td>\n",
+              "      <td>80000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Jane</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Design Team</td>\n",
+              "      <td>50000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Mary</th>\n",
+              "      <td>4</td>\n",
+              "      <td>Infrastructure</td>\n",
+              "      <td>60000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      ID       Department  Salary\n",
+              "Name                             \n",
+              "Rose   1  Architect Group  100000\n",
+              "John   2   Software Group   80000\n",
+              "Jane   3      Design Team   50000\n",
+              "Mary   4   Infrastructure   60000"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#To display the first 5 rows of new dataframe\n",
         "df2.head()"
@@ -873,11 +981,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "kOBWoceRcj0r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(50000)"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#Now, let us access the column using the name\n",
         "df2.loc['Jane', 'Salary']"
@@ -904,13 +1023,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "ADuNZLY-cj0s"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Design Team'"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#write your code here\n"
+        "#write your code here\n",
+        "df2.loc[\"Jane\",\"Department\"]"
       ]
     },
     {
@@ -924,13 +1055,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "Eo6xQSz_cj0v"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(60000)"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#write your code here\n"
+        "#write your code here\n",
+        "df2.iloc[3,2]"
       ]
     },
     {
@@ -964,11 +1107,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "nBvIeg4qcj0w"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Department</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Rose</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Architect Group</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>John</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Software Group</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Name  ID       Department\n",
+              "0  Rose   1  Architect Group\n",
+              "1  John   2   Software Group"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# let us do the slicing using old dataframe df\n",
         "\n",
@@ -977,11 +1174,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "vfSVEgMLcj0w"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Department</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Architect Group</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Software Group</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Design Team</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   ID       Department\n",
+              "0   1  Architect Group\n",
+              "1   2   Software Group\n",
+              "2   3      Design Team"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#let us do the slicing using loc() function on old dataframe df where index column is having labels as 0,1,2\n",
         "df.loc[0:2,'ID':'Department']"
@@ -989,11 +1243,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "AFO9TjIwcj0w"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Department</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Name</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Rose</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Architect Group</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>John</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Software Group</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Jane</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Design Team</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      ID       Department\n",
+              "Name                     \n",
+              "Rose   1  Architect Group\n",
+              "John   2   Software Group\n",
+              "Jane   3      Design Team"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#let us do the slicing using loc() function on new dataframe df2 where index column is Name having labels: Rose, John and Jane\n",
         "df2.loc['Rose':'Jane', 'ID':'Department']"
@@ -1020,13 +1337,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "oMLBj2lCcj0w"
-      },
-      "outputs": [],
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Department</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Jane</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Design Team</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Mary</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Infrastructure</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Name  ID      Department\n",
+              "2  Jane   3     Design Team\n",
+              "3  Mary   4  Infrastructure"
+            ]
+          },
+          "execution_count": 43,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute\n"
+        "# Using loc() to retrieve Name, ID, and Department for index labels 2 and 3\n",
+        "df.loc[2:3, ['Name', 'ID', 'Department']]"
       ]
     }
   ],
