--- a/MLlab/lab_activit2/2_Loading_data_with_Pandas.ipynb
+++ b/MLlab/lab_activit2/2_Loading_data_with_Pandas.ipynb
@@ -1592,7 +1592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1601,19 +1601,254 @@
         "df_new = df.copy()\n",
         "df_new.index = new_index\n",
         "\n",
-        "# Access the element at row 'a' and column 'Artist'\n",
+        "\n",
         "artist_a = df_new.loc['a', 'Artist']\n",
         "\n",
-        "# Select rows 'a' through 'd' for the 'Artist' column\n",
-        "artist_a_to_d = df_new.loc['a':'d', 'Artist']"
+        "\n",
+        "artist_a_to_d = df_new.loc['a':'d', 'Artist']\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Artist</th>\n",
+              "      <th>Album</th>\n",
+              "      <th>Released</th>\n",
+              "      <th>Length</th>\n",
+              "      <th>Genre</th>\n",
+              "      <th>Music Recording Sales (millions)</th>\n",
+              "      <th>Claimed Sales (millions)</th>\n",
+              "      <th>Released.1</th>\n",
+              "      <th>Soundtrack</th>\n",
+              "      <th>Rating</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>a</th>\n",
+              "      <td>Michael Jackson</td>\n",
+              "      <td>Thriller</td>\n",
+              "      <td>1982</td>\n",
+              "      <td>00:42:19</td>\n",
+              "      <td>pop, rock, R&amp;B</td>\n",
+              "      <td>46.0</td>\n",
+              "      <td>65</td>\n",
+              "      <td>1982-11-30</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>b</th>\n",
+              "      <td>AC/DC</td>\n",
+              "      <td>Back in Black</td>\n",
+              "      <td>1980</td>\n",
+              "      <td>0:42:11</td>\n",
+              "      <td>hard rock</td>\n",
+              "      <td>26.1</td>\n",
+              "      <td>50</td>\n",
+              "      <td>1980-07-25</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>9.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c</th>\n",
+              "      <td>Pink Floyd</td>\n",
+              "      <td>The Dark Side of the Moon</td>\n",
+              "      <td>1973</td>\n",
+              "      <td>0:42:49</td>\n",
+              "      <td>progressive rock</td>\n",
+              "      <td>24.2</td>\n",
+              "      <td>45</td>\n",
+              "      <td>1973-03-01</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>9.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>d</th>\n",
+              "      <td>Whitney Houston</td>\n",
+              "      <td>The Bodyguard</td>\n",
+              "      <td>1992</td>\n",
+              "      <td>0:57:44</td>\n",
+              "      <td>R&amp;B, soul, pop</td>\n",
+              "      <td>27.4</td>\n",
+              "      <td>44</td>\n",
+              "      <td>1992-11-17</td>\n",
+              "      <td>Y</td>\n",
+              "      <td>8.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>e</th>\n",
+              "      <td>Meat Loaf</td>\n",
+              "      <td>Bat Out of Hell</td>\n",
+              "      <td>1977</td>\n",
+              "      <td>0:46:33</td>\n",
+              "      <td>hard rock, progressive rock</td>\n",
+              "      <td>20.6</td>\n",
+              "      <td>43</td>\n",
+              "      <td>1977-10-21</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>8.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>f</th>\n",
+              "      <td>Eagles</td>\n",
+              "      <td>Their Greatest Hits (1971-1975)</td>\n",
+              "      <td>1976</td>\n",
+              "      <td>0:43:08</td>\n",
+              "      <td>rock, soft rock, folk rock</td>\n",
+              "      <td>32.2</td>\n",
+              "      <td>42</td>\n",
+              "      <td>1976-02-17</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>7.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>g</th>\n",
+              "      <td>Bee Gees</td>\n",
+              "      <td>Saturday Night Fever</td>\n",
+              "      <td>1977</td>\n",
+              "      <td>01:15:54</td>\n",
+              "      <td>disco</td>\n",
+              "      <td>20.6</td>\n",
+              "      <td>40</td>\n",
+              "      <td>1977-11-15</td>\n",
+              "      <td>Y</td>\n",
+              "      <td>7.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>h</th>\n",
+              "      <td>Fleetwood Mac</td>\n",
+              "      <td>Rumours</td>\n",
+              "      <td>1977</td>\n",
+              "      <td>0:40:01</td>\n",
+              "      <td>soft rock</td>\n",
+              "      <td>27.9</td>\n",
+              "      <td>40</td>\n",
+              "      <td>1977-02-04</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.5</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            Artist                            Album  Released    Length  \\\n",
+              "a  Michael Jackson                         Thriller      1982  00:42:19   \n",
+              "b            AC/DC                    Back in Black      1980   0:42:11   \n",
+              "c       Pink Floyd        The Dark Side of the Moon      1973   0:42:49   \n",
+              "d  Whitney Houston                    The Bodyguard      1992   0:57:44   \n",
+              "e        Meat Loaf                  Bat Out of Hell      1977   0:46:33   \n",
+              "f           Eagles  Their Greatest Hits (1971-1975)      1976   0:43:08   \n",
+              "g         Bee Gees             Saturday Night Fever      1977  01:15:54   \n",
+              "h    Fleetwood Mac                          Rumours      1977   0:40:01   \n",
+              "\n",
+              "                         Genre  Music Recording Sales (millions)  \\\n",
+              "a               pop, rock, R&B                              46.0   \n",
+              "b                    hard rock                              26.1   \n",
+              "c             progressive rock                              24.2   \n",
+              "d               R&B, soul, pop                              27.4   \n",
+              "e  hard rock, progressive rock                              20.6   \n",
+              "f   rock, soft rock, folk rock                              32.2   \n",
+              "g                        disco                              20.6   \n",
+              "h                    soft rock                              27.9   \n",
+              "\n",
+              "   Claimed Sales (millions) Released.1 Soundtrack  Rating  \n",
+              "a                        65 1982-11-30        NaN    10.0  \n",
+              "b                        50 1980-07-25        NaN     9.5  \n",
+              "c                        45 1973-03-01        NaN     9.0  \n",
+              "d                        44 1992-11-17          Y     8.5  \n",
+              "e                        43 1977-10-21        NaN     8.0  \n",
+              "f                        42 1976-02-17        NaN     7.5  \n",
+              "g                        40 1977-11-15          Y     7.0  \n",
+              "h                        40 1977-02-04        NaN     6.5  "
+            ]
+          },
+          "execution_count": 61,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_new"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Michael Jackson'"
+            ]
+          },
+          "execution_count": 62,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "artist_a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "a    Michael Jackson\n",
+              "b              AC/DC\n",
+              "c         Pink Floyd\n",
+              "d    Whitney Houston\n",
+              "Name: Artist, dtype: str"
+            ]
+          },
+          "execution_count": 63,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "artist_a_to_d"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "___"
+      ]
     }
   ],
   "metadata": {
