--- a/MLlab/lab_activit2/3_b_Numpy.ipynb
+++ b/MLlab/lab_activit2/3_b_Numpy.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "cl0iSvXazyru"
       },
@@ -73,11 +73,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "8rk_5cb8zyrv"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[[11, 12, 13], [21, 22, 23], [31, 32, 33]]"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a list\n",
         "\n",
@@ -96,11 +107,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "QQgwRSlWzyrv"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[11, 12, 13],\n",
+              "       [21, 22, 23],\n",
+              "       [31, 32, 33]])"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Convert list to Numpy Array\n",
         "# Every element is the same type\n",
@@ -120,11 +144,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "u7t6b8Atzyrw"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Show the numpy array dimensions\n",
         "\n",
@@ -142,11 +177,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "TUH35e9Ozyrw"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(3, 3)"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Show the numpy array shape\n",
         "\n",
@@ -164,11 +210,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "Eq0FIHjizyrx"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Show the numpy array size\n",
         "\n",
@@ -240,11 +297,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "DTxtacTVzyry"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(23)"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the element on the second row and third column\n",
         "\n",
@@ -262,11 +330,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "u5e343eOzyry"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(23)"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the element on the second row and third column\n",
         "\n",
@@ -302,11 +381,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "_-eXVA8_zyry"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(11)"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the element on the first row and first column\n",
         "\n",
@@ -342,11 +432,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "ONqHZ7bvzyrz"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([11, 12])"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the element on the first row and first and second columns\n",
         "\n",
@@ -364,11 +465,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "h3fAakSozyrz"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([13, 23])"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access the element on the first and second rows and third column\n",
         "\n",
@@ -431,11 +543,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "rO4AUNSxzyr3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[1, 0],\n",
+              "       [0, 1]])"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a numpy array X\n",
         "\n",
@@ -445,11 +569,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "2vcUsrLuzyr3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[2, 1],\n",
+              "       [1, 2]])"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a numpy array Y\n",
         "\n",
@@ -468,11 +604,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "Os7CZEY1zyr3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[3, 1],\n",
+              "       [1, 3]])"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Add X and Y\n",
         "\n",
@@ -509,11 +657,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "tBqa2cfLzyr4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[2, 1],\n",
+              "       [1, 2]])"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a numpy array Y\n",
         "\n",
@@ -523,11 +683,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "ye1UHlGzzyr4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[4, 2],\n",
+              "       [2, 4]])"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Multiply Y with 2\n",
         "\n",
@@ -564,11 +736,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "qECKrksAzyr4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[2, 1],\n",
+              "       [1, 2]])"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a numpy array Y\n",
         "\n",
@@ -578,11 +762,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "V9t5-p0mzyr4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[1, 0],\n",
+              "       [0, 1]])"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a numpy array X\n",
         "\n",
@@ -592,11 +788,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "NaZW_Wj3zyr5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[2, 0],\n",
+              "       [0, 2]])"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Multiply X with Y\n",
         "\n",
@@ -624,11 +832,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "wBx-x9Ovzyr5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[0, 1, 1],\n",
+              "       [1, 0, 1]])"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a matrix A\n",
         "\n",
@@ -638,11 +858,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "_oRG_xDrzyr5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[ 1,  1],\n",
+              "       [ 1,  1],\n",
+              "       [-1,  1]])"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a matrix B\n",
         "\n",
@@ -661,11 +894,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "Llgdbt4Rzyr5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[0, 2],\n",
+              "       [0, 2]])"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Calculate the dot product\n",
         "\n",
@@ -675,11 +920,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "GD8tzXZ8zyr6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[0.        , 0.90929743],\n",
+              "       [0.        , 0.90929743]])"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Calculate the sine of Z\n",
         "\n",
@@ -697,11 +954,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "h9jKIb8Tzyr6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[1, 1],\n",
+              "       [2, 2],\n",
+              "       [3, 3]])"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a matrix C\n",
         "\n",
@@ -711,11 +981,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "tSKLn6KUzyr6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3],\n",
+              "       [1, 2, 3]])"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Get the transposed of C\n",
         "\n",
@@ -742,15 +1024,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "uNoKpHZezyr6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8],\n",
+              "       [ 9, 10, 11, 12]])"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
         "\n",
-        "a = [[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]]"
+        "a = [[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]]\n",
+        "\n",
+        "a = np.array(a)\n",
+        "a"
       ]
     },
     {
@@ -764,13 +1062,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "8rOio_2Szyr6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute\n"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "a.size"
       ]
     },
     {
@@ -784,13 +1094,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "O-3up6eizyr7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([1, 2])"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute\n"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "a[0,0:2]"
       ]
     },
     {
@@ -804,21 +1126,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "EtWq1XAXzyr7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[[ 0,  4],\n",
+              "        [ 4,  0],\n",
+              "        [ 3,  6],\n",
+              "        [-6,  0]]])"
+            ]
+          },
+          "execution_count": 52,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
         "\n",
-        "B = np.array([[0, 1], [1, 0], [1, 1], [-1, 0]])"
+        "B = np.array([[0, 1], [1, 0], [1, 1], [-1, 0]])\n",
+        "A = np.array([[[2,4], [4, 2], [3, 6], [6, 3]]])\n",
+        "\n",
+        "C = A * B\n",
+        "C"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "uniai",
       "language": "python",
       "name": "python3"
     },
@@ -832,10 +1175,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.6"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.14.2"
     }
   },
   "nbformat": 4,
