--- a/MLlab/lab_activit2/3_b_Numpy.ipynb
+++ b/MLlab/lab_activit2/3_b_Numpy.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Worked On By : Ahmad 2610 4004**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "3eglme_4zyrp"
       },
